--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:docs": "yarn build && mv build docs",
+    "build:docs": "yarn build && (rm -rf docs & mv build docs)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://sulha199.github.io/metamask-provider-test/"
 }
